// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/Details renders an initial view with the right panel 1`] = `
<div
  className="Details"
>
  <TabBar
    extraElements={
      <button
        className="sidebar-open-close-button photon-button photon-button-ghost sidebar-open-close-button-isclosed"
        onClick={[Function]}
        title="Open the sidebar"
        type="button"
      />
    }
    onSelectTab={[Function]}
    selectedTabSlug="calltree"
    visibleTabs={
      Array [
        "calltree",
        "flame-graph",
        "stack-chart",
        "marker-chart",
        "marker-table",
      ]
    }
  />
  <ProfileCallTreeView />
  <Connect(CallNodeContextMenu) />
  <Connect(MarkersContextMenu) />
  <Connect(TimelineTrackContextMenu) />
</div>
`;

exports[`app/Details renders an initial view with the right panel for tab calltree 1`] = `
<div
  className="Details"
>
  <TabBar
    extraElements={
      <button
        className="sidebar-open-close-button photon-button photon-button-ghost sidebar-open-close-button-isclosed"
        onClick={[Function]}
        title="Open the sidebar"
        type="button"
      />
    }
    onSelectTab={[Function]}
    selectedTabSlug="calltree"
    visibleTabs={
      Array [
        "calltree",
        "flame-graph",
        "stack-chart",
        "marker-chart",
        "marker-table",
      ]
    }
  />
  <ProfileCallTreeView />
  <Connect(CallNodeContextMenu) />
  <Connect(MarkersContextMenu) />
  <Connect(TimelineTrackContextMenu) />
</div>
`;

exports[`app/Details renders an initial view with the right panel for tab flame-graph 1`] = `
<div
  className="Details"
>
  <TabBar
    extraElements={
      <button
        className="sidebar-open-close-button photon-button photon-button-ghost sidebar-open-close-button-isclosed"
        onClick={[Function]}
        title="Open the sidebar"
        type="button"
      />
    }
    onSelectTab={[Function]}
    selectedTabSlug="flame-graph"
    visibleTabs={
      Array [
        "calltree",
        "flame-graph",
        "stack-chart",
        "marker-chart",
        "marker-table",
      ]
    }
  />
  <FlameGraphView />
  <Connect(CallNodeContextMenu) />
  <Connect(MarkersContextMenu) />
  <Connect(TimelineTrackContextMenu) />
</div>
`;

exports[`app/Details renders an initial view with the right panel for tab marker-chart 1`] = `
<div
  className="Details"
>
  <TabBar
    extraElements={false}
    onSelectTab={[Function]}
    selectedTabSlug="marker-chart"
    visibleTabs={
      Array [
        "calltree",
        "flame-graph",
        "stack-chart",
        "marker-chart",
        "marker-table",
      ]
    }
  />
  <Connect(MarkerChart) />
  <Connect(CallNodeContextMenu) />
  <Connect(MarkersContextMenu) />
  <Connect(TimelineTrackContextMenu) />
</div>
`;

exports[`app/Details renders an initial view with the right panel for tab marker-table 1`] = `
<div
  className="Details"
>
  <TabBar
    extraElements={
      <button
        className="sidebar-open-close-button photon-button photon-button-ghost sidebar-open-close-button-isclosed"
        onClick={[Function]}
        title="Open the sidebar"
        type="button"
      />
    }
    onSelectTab={[Function]}
    selectedTabSlug="marker-table"
    visibleTabs={
      Array [
        "calltree",
        "flame-graph",
        "stack-chart",
        "marker-chart",
        "marker-table",
      ]
    }
  />
  <Connect(MarkerTable) />
  <Connect(CallNodeContextMenu) />
  <Connect(MarkersContextMenu) />
  <Connect(TimelineTrackContextMenu) />
</div>
`;

exports[`app/Details renders an initial view with the right panel for tab network-chart 1`] = `
<div
  className="Details"
>
  <TabBar
    extraElements={false}
    onSelectTab={[Function]}
    selectedTabSlug="network-chart"
    visibleTabs={
      Array [
        "calltree",
        "flame-graph",
        "stack-chart",
        "marker-chart",
        "marker-table",
      ]
    }
  />
  <WithSizeWrapper />
  <Connect(CallNodeContextMenu) />
  <Connect(MarkersContextMenu) />
  <Connect(TimelineTrackContextMenu) />
</div>
`;

exports[`app/Details renders an initial view with the right panel for tab stack-chart 1`] = `
<div
  className="Details"
>
  <TabBar
    extraElements={false}
    onSelectTab={[Function]}
    selectedTabSlug="stack-chart"
    visibleTabs={
      Array [
        "calltree",
        "flame-graph",
        "stack-chart",
        "marker-chart",
        "marker-table",
      ]
    }
  />
  <Connect(StackChartGraph) />
  <Connect(CallNodeContextMenu) />
  <Connect(MarkersContextMenu) />
  <Connect(TimelineTrackContextMenu) />
</div>
`;

exports[`app/Details show the correct state for the sidebar open button 1`] = `
<div
  className="Details"
>
  <TabBar
    extraElements={
      <button
        className="sidebar-open-close-button photon-button photon-button-ghost sidebar-open-close-button-isclosed"
        onClick={[Function]}
        title="Open the sidebar"
        type="button"
      />
    }
    onSelectTab={[Function]}
    selectedTabSlug="calltree"
    visibleTabs={
      Array [
        "calltree",
        "flame-graph",
        "stack-chart",
        "marker-chart",
        "marker-table",
      ]
    }
  />
  <ProfileCallTreeView />
  <Connect(CallNodeContextMenu) />
  <Connect(MarkersContextMenu) />
  <Connect(TimelineTrackContextMenu) />
</div>
`;

exports[`app/Details show the correct state for the sidebar open button 2`] = `
<div
  className="Details"
>
  <TabBar
    extraElements={
      <button
        className="sidebar-open-close-button photon-button photon-button-ghost sidebar-open-close-button-isopen"
        onClick={[Function]}
        title="Close the sidebar"
        type="button"
      />
    }
    onSelectTab={[Function]}
    selectedTabSlug="calltree"
    visibleTabs={
      Array [
        "calltree",
        "flame-graph",
        "stack-chart",
        "marker-chart",
        "marker-table",
      ]
    }
  />
  <ProfileCallTreeView />
  <Connect(CallNodeContextMenu) />
  <Connect(MarkersContextMenu) />
  <Connect(TimelineTrackContextMenu) />
</div>
`;

exports[`app/Details show the correct state for the sidebar open button 3`] = `
<div
  className="Details"
>
  <TabBar
    extraElements={
      <button
        className="sidebar-open-close-button photon-button photon-button-ghost sidebar-open-close-button-isclosed"
        onClick={[Function]}
        title="Open the sidebar"
        type="button"
      />
    }
    onSelectTab={[Function]}
    selectedTabSlug="flame-graph"
    visibleTabs={
      Array [
        "calltree",
        "flame-graph",
        "stack-chart",
        "marker-chart",
        "marker-table",
      ]
    }
  />
  <FlameGraphView />
  <Connect(CallNodeContextMenu) />
  <Connect(MarkersContextMenu) />
  <Connect(TimelineTrackContextMenu) />
</div>
`;

exports[`app/Details show the correct state for the sidebar open button 4`] = `
<div
  className="Details"
>
  <TabBar
    extraElements={
      <button
        className="sidebar-open-close-button photon-button photon-button-ghost sidebar-open-close-button-isclosed"
        onClick={[Function]}
        title="Open the sidebar"
        type="button"
      />
    }
    onSelectTab={[Function]}
    selectedTabSlug="calltree"
    visibleTabs={
      Array [
        "calltree",
        "flame-graph",
        "stack-chart",
        "marker-chart",
        "marker-table",
      ]
    }
  />
  <ProfileCallTreeView />
  <Connect(CallNodeContextMenu) />
  <Connect(MarkersContextMenu) />
  <Connect(TimelineTrackContextMenu) />
</div>
`;
